Connected to other microservices
