# Repository/ProductRepository.py
@@ -1,10 +1,10 @@
-from sqlalchemy import func
+from sqlalchemy import func, asc
 
 from models import ProductMonthly, ProductYearly
 from app import db
 
 from marshmallow import Schema, fields
-from sqlalchemy import and_, func, desc
+from sqlalchemy import desc
 
 
 class ProductSchema(Schema):
@@ -16,8 +16,8 @@ class ProductSchema(Schema):
 schema = ProductSchema()
 
 
-def product_result(score):
-    result = dict(id=score.id, user_id=score.user_id, achievement_id=score.score)
+def product_result(instance):
+    result = dict(id=instance.id, product_id=instance.product_id, items_sold=instance.items_sold)
     return schema.dump(result)
 
 
@@ -28,30 +28,73 @@ class ProductRepository:
 
     def update_product_counter(self, product_id, quantity):
         instance = db.session.query(ProductMonthly).filter_by(product_id=product_id).first()
+        instance_yearly = db.session.query(ProductYearly).filter_by(product_id=product_id).first()
         if not instance:
             instance = ProductMonthly()
-        instance.items_sold = instance.items_sold + quantity
-        db.session.add(instance)
-        db.session.commit()
-        return instance
-
-    def get_monthly_score(self, limit=5):
-        instance = db.session.query(ProductMonthly, func.sum(ProductMonthly.score).label("score")) \
-            .order_by(desc("score")) \
-            .limit(limit) \
-            .all()
-        if instance:
+            instance.product_id = product_id
+            instance.items_sold = quantity
+            db.session.add(instance)
+            db.session.commit()
             return product_result(instance)
+        elif instance:
+            instance.items_sold += quantity
+            db.session.add(instance)
+            db.session.commit()
+            return product_result(instance)
+        if not instance_yearly:
+            instance_yearly = ProductYearly()
+            instance_yearly.product_id = product_id
+            instance_yearly.items_sold = quantity
+            db.session.add(instance_yearly)
+            db.session.commit()
+            return product_result(instance_yearly)
+        elif instance:
+            instance_yearly.items_sold += quantity
+            db.session.add(instance_yearly)
+            db.session.commit()
+            return product_result(instance_yearly)
+
+    def get_top_monthly_products(self, limit=5):
+        instances = db.session.query(ProductMonthly) \
+            .order_by(desc("items_sold")).limit(limit).all()
+        if instances:
+            response = []
+            for item in instances:
+                response.append(product_result(item))
+            return response
         else:
             return {'error': 'No scores were found'}, 404
 
-    def get_yearly_score(self, limit=5):
-        instance = db.session.query(ProductYearly, func.sum(ProductYearly.score).label("score")) \
-            .order_by(desc("score")) \
-            .limit(limit) \
-            .all()
-        if instance:
-            return product_result(instance)
+    def get_end_monthly_products(self, limit=5):
+        instances = db.session.query(ProductMonthly) \
+            .order_by(desc("items_sold")).limit(limit).all()
+        if instances:
+            response = []
+            for item in instances:
+                response.append(product_result(item))
+            return response
+        else:
+            return {'error': 'No scores were found'}, 404
+
+    def get_top_yearly_products(self, limit=5):
+        instances = db.session.query(ProductMonthly) \
+            .order_by(asc("items_sold")).limit(limit).all()
+        if instances:
+            response = []
+            for item in instances:
+                response.append(product_result(item))
+            return response
+        else:
+            return {'error': 'No scores were found'}, 404
+
+    def get_end_yearly_products(self, limit=5):
+        instances = db.session.query(ProductMonthly) \
+            .order_by(asc("items_sold")).limit(limit).all()
+        if instances:
+            response = []
+            for item in instances:
+                response.append(product_result(item))
+            return response
         else:
             return {'error': 'No scores were found'}, 404
 
@@ -62,7 +105,7 @@ from apscheduler.schedulers.background import BackgroundScheduler
 def restart_products():
     instance = db.session.query(ProductMonthly).all()
     for obj in instance:
-        yearly_score = db.session.query(ProductYearly).filter(user_id=instance.user_id).first()
+        yearly_score = db.session.query(ProductYearly).filter(product_id=instance.product_id).first()
         if not yearly_score:
             yearly_score = ProductYearly()
         yearly_score.score = yearly_score.score + obj.score
